<resources>

    <string name="country_prompt">Choose a country</string>

    <string-array name="perfil">
        <item>Administrador</item>
        <item>Cliente</item>
    </string-array>

    <string-array name="hayWifi">
        <item>SI</item>
        <item>No</item>
    </string-array>

    <string name="app_name">Proyecto Móviles (Aerolínea)</string>

    <string name="title_activity_generar_rutas">Generar ruta de vuelo</string>
    <string name="title_activity_registro_usuario">Registro de usuario</string>
    <string name="title_activity_adm_empleado">Mantenimiento empleados</string>
    <string name="title_activity_adm_pasajero">Mantenimiento Pasajeros</string>
    <string name="title_activity_adm_escala">Mantenimiento escalas</string>
    <string name="title_activity_check_in_">Check-In</string>
    <string name="title_activity_show_historial_compras">Mostrar Historial de compras</string>
    <string name="title_activity_historial_compras">Historial de compras</string>
    <string name="title_activity_reserva_vuelo">Reserva de tiquete de vuelo</string>
    <string name="title_activity_compra_vuelo">Compra de tiquete de vuelo</string>
    <string name="title_activity_adm_avion">Mantenimiento de aviones</string>
    <string name="title_activity_adm_vuelo">Mantenimiento de vuelos</string>
    <string name="title_activity_adm_aeropuerto">Mantenimiento de aeropuertos</string>



    <!-- String related to shared preferences -->
    <string name="preference_user_key">USER</string>
    <string name="preference_user_key_default">none</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Clave (opcional)</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">La dirección de correo es inválida</string>
    <string name="error_invalid_password">La clave es muy corta</string>
    <string name="error_incorrect_password">Esta clave es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_nav_drawer">Bienvenido (Proyecto Aerolínea)</string>
    <string name="title_activity_add_aeropuerto">Mantenimiento Aeropuertos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_carrera">Carreras</string>
    <string name="my_curso">Cursos</string>
    <string name="my_profesor">Profesores</string>
    <string name="my_alumno">Alumnos</string>
    <string name="my_ciclo">Ciclos</string>
    <string name="my_grupo">Grupos</string>
    <string name="my_seguridad">Cuentas</string>
    <string name="my_matricula">Matricula</string>

    <string name="ofertaAcademica">Oferta Academica</string>

    <string name="nombre">Nombre</string>
    <string name="codigo">Codigo</string>
    <string name="carrera">Carrera</string>
    <string name="action_search">Buscar</string>
    <string name="agregar">Agregar</string>

    <string name="delete">ELIMINAR</string>
    <string name="edit">EDITAR</string>

    <string name="search_hint">Ingrese nombre…</string>


    <string name="nombreAddUptAeropuerto">Nombre</string>
    <string name="codigoAddUptAeropuerto">Codigo</string>
    <string name="telefonoAddUptAeropuerto">Teléfono</string>
    <string name="correoAddUptAeropuerto">Correo</string>
    <string name="direccionAddUpdAeropuerto">Direccion</string>

    <string name="nombreBuscarAeropuerto">Nombre</string>
    <string name="codigoBuscarAeropuerto">Código</string>


    <string name="codigoAddUptAvion">Código</string>
    <string name="modeloAddUptAvion">Modelo</string>
    <string name="marcaAddUptAvion">Marca</string>
    <string name="capacidadPasajerosAddUptAvion">Capacidad de pasajeros</string>
    <string name="capacidadTripulantesAddUptAvion">Capacidad de tripulantes</string>
    <string name="numeroAsientosAddUptAvion">Cantidad de asientos</string>
    <string name="wifiAddUptAvion">Wi-fi</string>

     <string name="codigoBuscarAvion">Código</string>




    <string name="codigoAddUptVuelo">Código</string>
    <string name="origenAddUptVuelo">Origen</string>
    <string name="destinoAddUptVuelo">Destino</string>
    <string name="horaSalidaAddUptVuelo">hora de salida</string>
    <string name="horaLlegadaAddUptVuelo">hora de llegada</string>
    <string name="numPasajerosAddUptVuelo">Número de pasajeros</string>
    <string name="numEscalasAddUptVuelo">Número de escalas</string>
    <string name="comidaAddUptVuelo">Comida</string>
    <string name="duracionAddUptVuelo">Capacidad de tripulantes</string>
    <string name="avionAddUptVuelo">Cantidad de asientos</string>

    <string name="codigoBuscarVuelo">Código</string>
    <string name="origenBuscarVuelo">Origen</string>
    <string name="destinoBuscarVuelo">Destino</string>



    <string name="codigoAddUptEscala">Código</string>
    <string name="duracionAddUptEscala">Duración</string>
    <string name="aeropuertoAddUptEscala">Aeropuerto</string>
    <string name="horaSalidaAddUptEscala">hora de llegada</string>
    <string name="horaLlegadaAddUptEscala">hora de partida</string>

    <string name="codigoBuscarEscala">Código</string>


    <string name="buscar">Buscar</string>


    <string name="nombreAddUpdProf">Nombre</string>
    <string name="emailAddUpdProf">Email</string>
    <string name="cedulaAddUpdProf">Cedula</string>
    <string name="telefonoAddUpdProf">Telefono</string>

    <string name="nombreAddUpdAlum">Nombre</string>
    <string name="emailAddUpdAlum">Email</string>
    <string name="cedulaAddUpdAlum">Cedula</string>
    <string name="telefonoAddUpdAlum">Telefono</string>
    <string name="fechaAddUpdAlum">Fecha de nacimiento</string>
    <string name="carreraAddUpdAlum">Carrera</string>

    <string name="cedulaAlumHist">Cedula</string>

     <string name="consultar">Consultar</string>


    <string name="añoAddUpdCi">Año</string>
    <string name="numeroAddUpdCi">Numero</string>
    <string name="finicioAddUpdCi">Fecha inicio</string>
    <string name="ffinalAddUpdCi">Fecha final</string>

    <string name="cicloAddUptGru">Ciclo</string>
    <string name="cursoAddUpdGru">Curso</string>
    <string name="numeroAddUptGru">Numero</string>
    <string name="horarioAddUptGru">Horario</string>
    <string name="profesorAddUptGru">Profesor</string>

    <string name="txtViewCarrera">Carrera</string>
    <string name="txtViewCiclo">Ciclo</string>
    <string name="txtViewCurso">Curso</string>

    <string name="emailAddUpdSeguridad">Email</string>
    <string name="contrasenaAddUpdSeguridad">Contraseña</string>
    <string name="cedulaAddUpdSeguridad">Cedula</string>
    <string name="privilegioAddUpdSeguridad">Privilegio</string>



     <string name="origenReserva">Origen</string>
    <string name="destinoReserva">Destino</string>
    <string name="horaSalidaReserva">hora de salida</string>
    <string name="horaLlegadaReserva">hora de llegada</string>
    <string name="diaSalidaReserva">Día de salida</string>
    <string name="diaRetornoReserva">Día de retorno</string>
    <string name="pasajerosReserva">Numero de pasajeros</string>
    <string name="claseReserva">Tipo de clase</string>
    <string name="codigoReserva">Cantidad de asientsos</string>



    <string name="privileges_prompt">Seleccione privilegio</string>
    <string name="annio">Año</string>
    <string name="ciclo">Ciclo</string>
    <string name="privilegio">Privilegio</string>
    <string name="cedula">Cedula</string>
    <string name="txtViewGrupo">Grupo</string>
    <string name="txtViewEstudiante">Estudiante</string>
    <string name="notaEditTxt">Nota</string>
    <string name="title_activity_historial_academico">HistorialAcademicoActivity</string>
    <string name="title_activity_show_historial_academico">ShowHistorialAcademico</string>
    <string name="title_activity_search_alumno">SearchAlumnoActivity</string>
    <string name="title_activity_search_curso">SearchCursoActivity</string>
    <string name="title_activity_search_profesor">SearchProfesorActivity</string>
     <string name="eliminar">Eliminar</string>
    <string name="listado_de_aeropuertos">Listado de aeropuertos registrados</string>
    <string name="updAeropuerto">Modificar</string>
    <string name="addAeropuerto">Agregar</string>
    <string name="Modificar">Modificar</string>
    <string name="Listar">Listar</string>
    <string name="fechaSalidaReserva">Fecha de partida</string>
    <string name="fechaRetornoReserva">Fecha de retorno</string>
    <string name="addReserva">Reservar</string>
    <string name="rutaDestino">Destino</string>
    <string name="rutaOrigen">Origen</string>
    <string name="duracionRuta">Duración en minutos</string>
    <string name="titularTarjeta">Titular de tarjeta</string>
    <string name="empresaTarjeta">Empresa de tarjeta</string>
    <string name="cvsTarjeta">Cvs</string>
    <string name="numeroTarjetaCompra">Número de tarjeta</string>
    <string name="cedulaCompra">Cédula</string>
    <string name="registro">Registrarse</string>
    <string name="listado_de_escalas">Listado</string>
    <string name="cedulaBuscarEmpleado">Cédula</string>
    <string name="nombreBuscarEmpleado">Nombre</string>
    <string name="listado_de_empleados">Listado de empleados</string>
    <string name="primerApellido">Primer apellido</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="clave">Clave</string>
    <string name="segundoApellido">Segundo apellido</string>
    <string name="estadoCivil">Estado civil</string>
    <string name="edad">Edad</string>
    <string name="txt2" />
    <string name="Login">Proyecto Aerolínea</string>
    <string name="Proyecto_Aerolínea">Proyecto Aerolínea</string>
    <string name="IniciarS">Iniciar Sesión</string>

</resources>
