<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistroUsuarioActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/registro_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Digite los siguientes datos para registrarse"
                    android:textSize="20dp"/>


                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/primerApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/primerApellido"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/segundoApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/segundoApellido"
                    android:inputType="textPersonName" />


                <EditText
                    android:id="@+id/cedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cedula"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefonoAddUpdProf"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccionAddUpdAeropuerto"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/nacionalidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nacionalidad"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/fechaN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:hint="Fecha de nacimiento"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correoAddUptAeropuerto"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/clave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/clave"
                    android:inputType="textPersonName" />



                <EditText
                    android:id="@+id/estadoCivil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/estadoCivil"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edad"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/perfilTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:hint="Perfil"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/perfil"
                    android:prompt="@string/country_prompt" />



                <Button
                    android:id="@+id/btnRegistarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginBottom="75dp"
                    android:text="@string/registro" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>